--- a/src/components/Pdf/Pdf.css
+++ b/src/components/Pdf/Pdf.css
@@ -3,3 +3,10 @@ canvas{
     /*height: 100vh;*/
     outline: 10px solid red;
 }
+
+.pdfviewmobile .viewer-toolbar-left .viewer-toolbar-item:nth-of-type(1),
+.pdfviewmobile .viewer-toolbar-left .viewer-toolbar-item:nth-of-type(2),
+.pdfviewmobile .viewer-toolbar-right {
+    display: none;
+}
+
